# advent-of-code-2024

./: README.md  make-day
day-1/: day-1.py
day-10/: Cargo.toml  day-10.py
day-11/: Cargo.toml  day-11.py
day-13/: Cargo.toml  day-13.py
day-2/: day-2.py
day-3/: Cargo.toml  day-3.py
day-4/: Cargo.toml  day-4.py
day-5/: Cargo.toml  day-5.py
day-6/: Cargo.toml  day-6.py
day-7/: Cargo.toml  day-7.py
day-8/: Cargo.toml  day-8.py
day-9/: Cargo.toml  day-9.py
template/: python.py
