[package]
name = 'day-10'
version = '1.0.0'

[[bin]]
name = 'day-10'
path = './day-10.rs'
[package]
name = 'day-10'
version = '1.0.0'

[[bin]]
name = 'day-10'
path = './day-10.rs'
[package]
name = 'day-10'
version = '1.0.0'

[[bin]]
name = 'day-10'
path = './day-10.rs'
[package]
name = 'day-10'
version = '1.0.0'

[[bin]]
name = 'day-10'
path = './day-10.rs'
[package]
name = 'day-10'
version = '1.0.0'

[[bin]]
name = 'day-10'
path = './day-10.rs'
[package]
name = 'day-10'
version = '1.0.0'

[[bin]]
name = 'day-10'
path = './day-10.rs'
[package]
name = 'day-10'
version = '1.0.0'

[[bin]]
name = 'day-10'
path = './day-10.rs'
[package]
name = 'day-10'
version = '1.0.0'

[[bin]]
name = 'day-10'
path = './day-10.rs'
[package]
name = 'day-10'
version = '1.0.0'

[[bin]]
name = 'day-10'
path = './day-10.rs'
[package]
name = 'day-10'
version = '1.0.0'

[[bin]]
name = 'day-10'
path = './day-10.rs'
[package]
name = 'day-10'
version = '1.0.0'

[[bin]]
name = 'day-10'
path = './day-10.rs'
[package]
name = 'day-10'
version = '1.0.0'

[[bin]]
name = 'day-10'
path = './day-10.rs'
[package]
name = 'day-10'
version = '1.0.0'

[[bin]]
name = 'day-10'
path = './day-10.rs'
[package]
name = 'day-10'
version = '1.0.0'

[[bin]]
name = 'day-10'
path = './day-10.rs'
[package]
name = 'day-10'
version = '1.0.0'

[[bin]]
name = 'day-10'
path = './day-10.rs'
